# AI_Book_Final

./: .gitignore  README.md  app.py  render.yaml  requirements.txt  start.sh
AI_BOOK/: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  run_dev.sh  setup.py  start.sh
AI_BOOK/src/aibook/: __init__.py  __main__.py  builder.py
AI_BOOK/src/content/chapters/: 00_inhoudsopgave.md  03_geschiedenis.md  04_basis.md  06_toepassingen.md  07_toekomst.md
AI_BOOK/src/static/css/: style.css
AI_BOOK/src/templates/: base.html  index.html
AI_BOOK/templates/: base.html
Backup_AI_Final/: app.py
Backup_AI_Final/src/content/chapters/: 00_inhoudsopgave.md  01_introductie.md  05_misverstanden.md  10_gevorderde_opdrachten.md
Backup_AI_Final/templates/: pdf_template.html
src/: build.py  server.py
src/aibook/: app.py  server.py
src/aibook/templates/: chapter.html
src/content/chapters/: 00_inhoudsopgave.md  01_introductie.md  02_inleiding.md  03_geschiedenis.md  04_basis.md  05_misverstanden.md  06_toepassingen.md  07_creativiteit.md  07_toekomst.md  08_toekomst.md  08_zelf_aan_de_slag.md  09_praktische_opdrachten.md  10_gevorderde_opdrachten.md  10_praktische_opdrachten.md  11_ai_tools.md  12_ai_tools.md
src/static/js/: main.js
static/css/: style.css
static/js/: main.js
templates/: base.html  chapter.html
